CHANGES IN FLTK 1.3.4					RELEASED: ??? ?? ????

	New features and extensions

	- Added full support of true subwindows to the Mac OS X platform.
	  Window nesting to any depth is possible. An Fl_Gl_Window window or
	  subwindow can contain Fl_Window's as subwindows.

	1.3.4 ABI FEATURES

	  To enable the following ABI features, put:
	  #define FL_ABI_VERSION 10304
	  ..at the top of your FL/Enumerations.H and rebuild FLTK and your app.

	- Added the Fl_Shared_Image::scale(width, height) function which gives
	  a shared image its own drawing size, independently of the size of the
	  underlying image. This improves much image drawing on high resolution
	  surfaces such as Laser printers, PDF files, or Apple retina displays.

	Other improvements

	- The Mac OS X platform no longer uses the deprecated AGL
	  (Apple GL library) to draw OpenGL data. Instead, it uses standard
	  cocoa APIs. This allows FLTK to support drawing GL scenes at high
	  resolution when an Fl_Gl_Window is mapped to a 'retina' display.
	- fl_read_image() now captures all pixels within the rectangle
	  described by its arguments, whether they belong to a GL scene
	  or not (STR #3142). It also captures subwindows of GL windows.
	- Fl::delete_widget() now hides the widget or window immediately
	  (i.e. when called) - only destruction is delayed as before.
	- The PostScript code output when printing images under Linux/Unix
	  is quite smaller due to use of lossless compression techniques.
	- The Linux/Unix printer dialog now uses BSD-style printing commands
	  (lpr/lpq) when SystemV-style commands (lp/lpstat) are not available.
	- Drawing alpha-blended images under X11 is now accelerated with
	  Xrender.
	- The fonts used for the FL_COURIER font family was changed on the Mac OS X
	  platform from 'Courier New' to 'Courier' because it was too thin.

	Bug fixes

	- fluid doesn't output trailing white space in .fl files after
	  some statements anymore (STR #3239).