@@ -1,0 +1,7 @@
+/*
+  DO NOT EDIT - This file is generated by CMake
+*/
+
+/* define FL_ABI_VERSION as 10x0y for FLTK ABI version 1.x.y */
+
+#cmakedefine FL_ABI_VERSION @FL_ABI_VERSION@
