@@ -1,0 +1,7 @@
+/*
+  DO NOT EDIT - This file is generated by configure
+*/
+
+/* define FL_ABI_VERSION as 10x0y for FLTK ABI version 1.x.y */
+
+#undef FL_ABI_VERSION
