@@ -172,6 +172,21 @@ AC_SUBST(GLLIBBASENAME)
 AC_SUBST(IMGLIBBASENAME)
 AC_SUBST(CAIROLIBBASENAME)
 
+has_abiversion=""
+AC_ARG_WITH(abiversion,
+[  --with-abiversion       Build with FL_ABI_VERSION, e.g. 10304 for FLTK 1.3.4])
+has_abiversion="$with_abiversion"
+if test "$has_abiversion" = "yes" ; then
+ has_abiversion=""
+else
+ if test "$has_abiversion" = "no" ; then
+  has_abiversion=""
+ fi
+fi
+if test ! "$has_abiversion" = "" ; then
+ AC_DEFINE_UNQUOTED(FL_ABI_VERSION, [$has_abiversion], [define to FL_ABI_VERSION])
+fi
+
 dnl Handle compile-time options...
 AC_ARG_ENABLE(debug, [  --enable-debug          turn on debugging [[default=no]]])
 if test x$enable_debug = xyes; then
@@ -1475,6 +1490,7 @@ fi
 
 dnl Write all of the files...
 AC_CONFIG_HEADER(config.h:configh.in)
+AC_CONFIG_HEADER(FL/abi-version.h:abi-version.in)
 AC_OUTPUT(makeinclude fltk.list fltk-config fltk.spec FL/Makefile)
 
 dnl Make sure the fltk-config script is executable...
